--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
   <div class="container">
-    <h1><span class="accent">f//c</span> Syndicate</h1>
+    <h1><span class="accent">f//c</span> syndicate</h1>
     <p>A syndicate for investors sick of waiting for permission.<br />
        You saw the deal. IC passed. Again.<br />
        We write our own checks now.</p>
