--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
       font-size: 0.875rem;
       opacity: 0.6;
     }
+    .button {
+    display: inline-block;
+    background-color: #39FF14;  /* acid green */
+    color: #000;                /* black text */
+    font-weight: bold;
+    padding: 0.75rem 1.5rem;
+    text-decoration: none;
+    font-family: monospace;
+    margin-top: 2rem;
+  }
   </style>
 </head>
 <body>
@@ -47,7 +57,7 @@
     <p>We’re hands-off, but not absent. Founders get capital, signal, and quiet backing. And when needed - access to serious venture brains.</p>
 
     <p>We call it <span class="accent">fuck my carry</span>.</p>
-
+    <a href="manifesto.html" class="button">Read the Manifesto</a>
     <footer>© f//c syndicate. All rights reserved.</footer>
   </div>
 </body>
