--- a/manifesto.html
+++ b/manifesto.html
@@ -49,5 +49,6 @@
 
     <p><a href="index.html">Back to home</a></p>
   </div>
+    <footer>© f//c syndicate. All rights reserved.</footer>
 </body>
 </html>
