--- a/manifesto.html
+++ b/manifesto.html
@@ -31,6 +31,21 @@
       color: #39FF14;
       text-decoration: none;
     }
+    footer {
+      margin-top: 3rem;
+      font-size: 0.875rem;
+      opacity: 0.6;
+    }
+    .button {
+    display: inline-block;
+    background-color: #39FF14;  /* acid green */
+    color: #000;                /* black text */
+    font-weight: bold;
+    padding: 0.75rem 1.5rem;
+    text-decoration: none;
+    font-family: monospace;
+    margin-top: 2rem;
+  }
   </style>
 </head>
 <body>
