--- a/manifesto.html
+++ b/manifesto.html
@@ -62,7 +62,7 @@
 
     <p>If you're reading this, you probably already belong here.</p>
 
-    <p><a href="index.html">Back to home</a></p>
+    <p><a href="index.html" class="button">Back Home</a></p>
   </div>
     <footer>© f//c syndicate. All rights reserved.</footer>
 </body>
